--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <header class="header">
+    <div class="header__container container">
+      <a href="#" class="logo">logo</a>
+      <nav class="nav">
+        <a href="#" class="nav__link">GitHub</a>
+        <a href="#" class="nav__link">Git System</a>
+      </nav>
+    </div>
+  </header>
 </body>
 </html>
