add about section

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <a href="#" class="nav__link">Git System</a>
       </nav>
     </div>
+    <section>
+      <img src="./img/avatar.jpg" alt="">
+    </section>
   </header>
 </body>
 </html>
